Ploblema de este commit El codigo llega hasta orden de compra. Desde ahi funciona mal. A mi solo me aparece una orden de compra con fecha del 17/11/2025 y al apretar en el boton de seleccionar da eror. Le meti un par de lineas de cod y no salio.

--- a/src/main/resources/templates/orden-compra-form.html
+++ b/src/main/resources/templates/orden-compra-form.html
@@ -16,7 +16,7 @@
         <span th:text="${errorMessage}"></span>
     </div>
 
-    <form th:action="@{/ordenes-compra/seleccionar}" method="get">
+    <form th:action="@{/ordenes-compra}" method="get"></form>
         <div class="mb-3">
             <label for="pedidoCotizacionSelect" class="form-label">Seleccionar Pedido de Cotización:</label>
             <select class="form-select" id="pedidoCotizacionSelect" name="id" onchange="this.form.submit()">
